fix: overlay z-index

--- a/scss/elements/modal/_mixins.scss
+++ b/scss/elements/modal/_mixins.scss
@@ -11,22 +11,22 @@
   .modalContent{
     outline          : none;
     background-color : $pe-color-white;
-    margin-left      : auto;
-    margin-right     : auto;
-    margin-top       : 60px;
-    margin-bottom    : 60px;
+    max-height       : 100%;
+    content          : "";
+    display          : table;
+    clear            : both;
   }
 
   .modalOverlay{
     background-color : rgba(25, 25, 25, 0.6);
     position         : fixed;
-    border-radius    : 2px;
     top              : 0;
     left             : 0;
     right            : 0;
     bottom           : 0;
-    height           : 100%;
+    max-height       : 100%;
     z-index          : 2000;
+    padding          : 60px 0px 60px 0px;
   }
 
 
@@ -39,7 +39,7 @@
         @media(min-width:pe-responsive-get-breakpoint-value($breakpoint, min)){
 
           .modalHeader{
-            padding          : 40px 40px 10px 40px;
+            padding          : 40px 40px 0px 40px;
             background-color : $pe-color-white;
           }
 
@@ -53,23 +53,27 @@
           .modalBody{
             -ms-overflow-style : none;
             overflow-y         : scroll;
-            max-height         : calc(100vh - 120px);
+            max-height         : 735px;
             font-size          : 14px;
             line-height        : 22px;
-            padding            : 10px 40px 14px 40px;
+            padding            : 0px 40px 0px 40px;
             outline            : none;
           }
 
           .modalBody_border{
             padding-top   : 20px;
             margin-top    : 10px;
-            margin-bottom : 14px;
+            margin-bottom : 20px;
             border-top    : 1px solid $pe-color-concrete;
             border-bottom : 1px solid $pe-color-concrete;
           }
 
+          .modalBody_border_normal{
+            margin-top    : 20px;
+            margin-bottom : 28px;
+          }
+
           .modalFooter {
-            width   : 100%;
             padding : 0px 40px 40px 40px;
           }
 
@@ -102,7 +106,7 @@
         @media(min-width:pe-responsive-get-breakpoint-value($breakpoint, min)) and (max-width:pe-responsive-get-breakpoint-value($breakpoint, max)){
 
           .modalHeader{
-            padding          : 40px 40px 10px 40px;
+            padding          : 40px 40px 0px 40px;
             background-color : $pe-color-white;
           }
 
@@ -116,23 +120,27 @@
           .modalBody{
             -ms-overflow-style : none;
             overflow-y         : scroll;
-            max-height         : calc(100vh - 120px);
+            max-height         : 735px;
             font-size          : 14px;
             line-height        : 22px;
-            padding            : 10px 40px 14px 40px;
+            padding            : 0px 40px 0px 40px;
             outline            : none;
           }
 
           .modalBody_border{
             padding-top   : 20px;
-            margin-bottom : 14px;
+            margin-bottom : 20px;
             margin-top    : 10px;
             border-top    : 1px solid $pe-color-concrete;
             border-bottom : 1px solid $pe-color-concrete;
           }
 
+          .modalBody_border_normal{
+            margin-top    : 20px;
+            margin-bottom : 28px;
+          }
+
           .modalFooter {
-            width   : 100%;
             padding : 0px 40px 40px 40px;
           }
 
@@ -165,7 +173,7 @@
 
 
           .modalHeader{
-            padding          : 24px 24px 8px 24px;
+            padding          : 24px 24px 0px 24px;
             background-color : $pe-color-white;
           }
 
@@ -178,25 +186,29 @@
 
           .modalBody{
             -ms-overflow-style : none;
-            max-height         : calc(100vh - 120px);
+            max-height         : 735px;
             overflow-y         : scroll;
             font-size          : 14px;
             line-height        : 22px;
-            padding            : 8px 24px 9px 24px;
+            padding            : 0px 24px 0px 24px;
             outline            : none;
           }
 
           .modalBody_border{
-            margin-top    : 8px;
-            margin-bottom : 6px;
+            margin-top    : 16px;
+            margin-bottom : 14px;
             padding-top   : 16px;
             border-top    : 1px solid $pe-color-concrete;
             border-bottom : 1px solid $pe-color-concrete;
           }
 
+          .modalBody_border_normal{
+            margin-top    : 16px;
+            margin-bottom : 24px;
+          }
+
           .modalFooter {
             display   : flex;
-            width     : 100%;
             padding   : 0px 20px 18px 20px;
             flex-wrap : wrap;
           }
@@ -232,7 +244,7 @@
         @media(min-width:pe-responsive-get-breakpoint-value($breakpoint, min)) and (max-width:pe-responsive-get-breakpoint-value($breakpoint, max)){
 
           .modalHeader{
-            padding          : 24px 24px 8px 24px;
+            padding          : 24px 24px 0px 24px;
             background-color : $pe-color-white;
           }
 
@@ -246,24 +258,28 @@
           .modalBody{
             -ms-overflow-style : none;
             overflow-y         : scroll;
-            max-height         : calc(100vh - 120px);
+            max-height         : 735px;
             font-size          : 14px;
             line-height        : 22px;
-            padding            : 8px 24px 24px 24px;
+            padding            : 0px 24px 0px 24px;
             outline            : none;
           }
 
           .modalBody_border{
-            margin-top    : 8px;
+            margin-top    : 16px;
             margin-bottom : 6px;
             padding-top   : 16px;
             border-top    : 1px solid $pe-color-concrete;
             border-bottom : 1px solid $pe-color-concrete;
           }
 
+          .modalBody_border_normal{
+            margin-top    : 16px;
+            margin-bottom : 24px;
+          }
+
           .modalFooter {
             display   : flex;
-            width     : 100%;
             padding   : 0px 20px 18px 20px;
             flex-wrap : wrap;
           }
